se agrego atutenticacion de usuario por jwt

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=8080
 MONGODB_CNN=mongodb+srv://user_node:ZfWXsXgXwP4WuhBr@micluster.yckwh.mongodb.net/cafeDB
+SECRETORPRIVATEKEY=3ST03SM1PUB1ICK323@913
