google sigin added

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=8080
 MONGODB_CNN=mongodb+srv://user_node:ZfWXsXgXwP4WuhBr@micluster.yckwh.mongodb.net/cafeDB
-SECRETORPRIVATEKEY=3ST03SM1PUB1ICK323@913
+SECRETORPRIVATEKEY=3ST03SM1PUB1ICK323@
+GOOGLE_CLIENT_ID=255558461007-edka3kogt4bf7h2getdml268576b5cd9.apps.googleusercontent.com
+GOOGLE_SECRET_ID=eB47zldXd_5dOXix80vkWW-x
